[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Spaceship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Planet.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 0, 2 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
planet_scene = ExtResource( 3 )

[node name="Spaceship" parent="." instance=ExtResource( 1 )]

[node name="PlanetTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 500 )

[node name="PlanetPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PlanetSpawnLocation" type="PathFollow2D" parent="PlanetPath"]
position = Vector2( 0, 2 )
rotation = -0.443494

[connection signal="hit" from="Spaceship" to="." method="game_over"]
[connection signal="timeout" from="PlanetTimer" to="." method="_on_PlanetTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
